--- a/trial.html
+++ b/trial.html
@@ -70,6 +70,8 @@ function test2(position) {
     document.getElementById('position_view').innerHTML = geo_text;
 
 }
+
+	console.log(position.coords.latitude)
 </script>
 
 
