--- a/trial2.html
+++ b/trial2.html
@@ -58,7 +58,8 @@ function test2(position) {
 
     let lat0=position.coords.latitude
     let lon0=osition.coords.longitude
-
+    console.log(lat0,lon0)
+    
 //////////////////////////
 
     // Leafletを使用して地図を作成
