--- a/trial2.html
+++ b/trial2.html
@@ -54,9 +54,9 @@ function test2(position) {
 
     document.getElementById('position_view').innerHTML = geo_text;
 
-    let lat0=position.coords.latitude
-    let lon0=osition.coords.longitude    
-    console.log(lat0,lon0)
+    let lat0=position.coords.latitude;
+    let lon0=osition.coords.longitude   ; 
+    console.log(lat0,lon0);
     
 }
 
