--- a/trial2.html
+++ b/trial2.html
@@ -55,7 +55,7 @@ function test2(position) {
     document.getElementById('position_view').innerHTML = geo_text;
 
     let lat0=position.coords.latitude;
-    let lon0=osition.coords.longitude   ; 
+    let lon0=position.coords.longitude; 
     console.log(lat0,lon0);
     
 }
