--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@ function test2(position) {
     var lat0 = position.coords.latitude;
     var lon0 = position.coords.longitude;
 
-    var geo_text = "緯度:" + lat0 + "\n";
-    geo_text += "経度:" + lon0 + "\n";
-    geo_text += "高度:" + position.coords.altitude + "\n";
-    geo_text += "位置精度:" + position.coords.accuracy + "\n";
-    geo_text += "高度精度:" + position.coords.altitudeAccuracy  + "\n";
-    geo_text += "移動方向:" + position.coords.heading + "\n";
-    geo_text += "速度:" + position.coords.speed + "\n";
+    var geo_text = "latitude:" + lat0 + "\n";
+    geo_text += "longitude:" + lon0 + "\n";
+    geo_text += "altitude:" + position.coords.altitude + "\n";
+    geo_text += "accuracy:" + position.coords.accuracy + "\n";
+    geo_text += "altitude_accuracy:" + position.coords.altitudeAccuracy  + "\n";
+    geo_text += "heading:" + position.coords.heading + "\n";
+    geo_text += "speed:" + position.coords.speed + "\n";
 
     var date = new Date(position.timestamp);
-    geo_text += "取得時刻:" + date.toLocaleString() + "\n";
-    geo_text += "取得回数:" + (++num) + "\n";
+    geo_text += "time:" + date.toLocaleString() + "\n";
+    geo_text += "count:" + (++num) + "\n";
 
     document.getElementById('position_view').innerHTML = geo_text;
 
