--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <style>
         #map {
-            height: 100%;
+            height: 700px;
             width: 100%;
         }
     </style>
