--- a/trial3.html
+++ b/trial3.html
@@ -67,7 +67,7 @@ function test2(position) {
 
     // マーカーを追加
     var marker = L.marker([lat0, lon0]).addTo(map);
-    marker.bindPopup("<b>HERE!</b>").openPopup();
+    marker.bindPopup("<b>I'M HERE! HELP!</b>").openPopup();
 }
 
 // HTML要素が読み込まれた後にテスト関数を呼び出す
