--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
             width: 100%;
         }
     </style>
+
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@IshiiStpete" />
+    <meta name="twitter:title" content="I'M HERE! HELP!">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/tztechno/vercel_map/main/me.png">
+
+  
 </head>
 <body>
 
